# disk_magician

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  config.json.template  disk_magician.sh  install.sh  pyproject.toml  safety.local.json.template
.github/: PULL_REQUEST_TEMPLATE.md
commands/: disk-root-cause.md
findings_wiki/: README.md  TEMPLATE.md
launchd/: com.disk-magician.colima-prune.plist  com.disk-magician.gemini-dedup.plist  com.disk-magician.hermes-vacuum.plist  com.disk-magician.playwright-dedup.plist  com.disk-magician.worktree-venvs.plist  com.jleechan.disk-magician-apfs-snapshots.plist  com.jleechan.disk-magician-colima-prune.plist  com.jleechan.disk-magician-gemini-dedup.plist  com.jleechan.disk-magician-hermes-vacuum.plist  com.jleechan.disk-magician-playwright-dedup.plist  com.jleechan.disk-magician-sweeper-health.plist  com.jleechan.disk-magician-worktree-venvs.plist  com.jleechanorg.disk-magician-drilldown.plist.template  com.jleechanorg.disk-magician-frontier-nightly.plist.template  com.jleechanorg.disk-magician-observer.plist.template
roadmap/: 2026-07-06-regrowth-prevention-launch.md  2026-07-11-total-coverage-snapshot-v2.md  2026-07-14-disk-audit-bead-execution-goal.md  2026-07-17-cleanup-investigation-goal-ironclad.md  2026-07-17-plan-700g-target.md  2026-07-18-plan-200g-target-v2.md  2026-07-21-generic-split-state-repo-design.md  2026-07-22-disk-regrowth-rootcause.md  README.md  nextsteps-2026-07-06-disk-magician-four-causes.md  nextsteps-2026-07-12-disk-magician-root-cause.md  nextsteps-2026-07-20-hardening-swarm.md  (+1 more)
tests/: test_audit.py  (+35 more)
(+137 files in other folders)
